--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
     <title>Photo Site</title>
 </head>
 <body>
-    
+    <!-- Symbols can be used in HTML -->
+    <p>Victoria &#127793; Conlin</p>
+    <img src="Images/caradhras.jpeg" alt="Snow covered mountains">
+    <img src="Images/waterfall.jpeg" alt="Waterfall">
+    <img src="Images/tree.jpeg" alt="Tree">
+    <img src="Images/ocean.jpeg" alt="Low tide at the beach">
+    <img src="Images/field.jpeg" alt="Field">
+    <img src="Images/nonSnowyMountains.jpeg" alt="Mountain ridge">
+    <img src="Images/snowyForest.jpeg" alt="Snowy covered forest">
+    <img src="Images/tatooine.jpeg" alt="Desert dunes">
 </body>
 </html>
