Added a PlantImages folder and replaced the original images to images of plants.

--- a/index.html
+++ b/index.html
@@ -11,13 +11,23 @@
 <body>
     <!-- Symbols can be used in HTML -->
     <p>Victoria &#127793; Conlin</p>
-    <img src="Images/caradhras.jpeg" alt="Snow covered mountains">
+
+    <!-- <img src="Images/caradhras.jpeg" alt="Snow covered mountains">
     <img src="Images/waterfall.jpeg" alt="Waterfall">
     <img src="Images/tree.jpeg" alt="Tree">
     <img src="Images/ocean.jpeg" alt="Low tide at the beach">
     <img src="Images/field.jpeg" alt="Field">
     <img src="Images/nonSnowyMountains.jpeg" alt="Mountain ridge">
     <img src="Images/snowyForest.jpeg" alt="Snowy covered forest">
-    <img src="Images/tatooine.jpeg" alt="Desert dunes">
+    <img src="Images/tatooine.jpeg" alt="Desert dunes"> -->
+
+    <img src="PlantImages/IMG_0646.jpg" alt="Cactus">
+    <img src="PlantImages/IMG_0648.jpg" alt="Umbrella tree">
+    <img src="PlantImages/IMG_0649.jpg" alt="Malabar Plum">
+    <img src="PlantImages/IMG_0650.jpg" alt="Cat palm">
+    <img src="PlantImages/IMG_0651.jpg" alt="Porcelain flower">
+    <img src="PlantImages/IMG_0655.jpg" alt="Dragon tree">
+    <img src="PlantImages/IMG_0656.jpg" alt="Peace Lily">
+    <img src="PlantImages/IMG_0657.jpg" alt="ZZ plant">
 </body>
 </html>
